fix[HEADER]: for 16:9 team behind eirspace. for phone menu toggle behind eirspace.

--- a/resources/assets/header.css
+++ b/resources/assets/header.css
@@ -22,7 +22,7 @@
 
 .logo-navbar {
     padding: 15px 0;
-    margin-right: 20px;
+    margin-right: 20vw;
     margin-left: 12vw;
     margin-top: 2.4vh;
 }
@@ -35,8 +35,8 @@
 }
 
 .logo-navbar img {
-    width: auto;
-    height: 60%;
+    width: 100%;
+    height: auto;
     min-height: 40px;
     min-width: 12vw;
 }
@@ -181,6 +181,10 @@
         margin-right: -140px; /* The picture is too wide. */
     }
 
+    .logo-navbar img {
+        width: 60%;
+    }
+
     .nav-links {
         font-size: 20px;
     }
@@ -197,34 +201,31 @@
 
 @media (max-width: 1400px) {
     .navbar {
-        height: 10vh;
+        height: 13vh;
     }
 
     .logo-navbar img {
-        width: 6vw;
-        height: 0px;
-        min-height: 0px;
+        width: 60%;
     }
 
     .dropdown-links li a {
-        font-size: 0.5em;
+        font-size: 0.8em;
     }
 
     .menu-toggle {
-        margin-top: 1vh;
+        margin-top: 2.5vh;
         font-size: 2.4em;
     }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
     .navbar {
         height: 18vh;
         min-height: 110px;
     }
 
     .logo-navbar img {
-        width: auto;
-        height: 50px;
+        width: 70%;
     }
     
     .menu-toggle {
@@ -248,6 +249,10 @@
 }
 
 @media (max-width: 500px) {
+    .logo-navbar img {
+        width: 40%;
+    }
+
     .dropdown-links li a {
         font-size: 1em;
     }
